# T-SHRED

./: .gitignore  LICENSE  README.md  ROM_plasma.ipynb  pyproject.toml  requirements.txt
Example Implementation/: CNN_with_Skip_Connections.py  GRU_UNET_Implementation  SINDy_Loss_Current_Implementation
Latex/: main.tex  refs.bib  unsrtsiam.bst
apptainer/: apptainer.def  apptainer_distributed.def
notebooks/: figure1.ipynb  latex_table.py  plot_plasma.ipynb  plots.ipynb  the_well.ipynb  the_well_rsvd.ipynb
pickles/: lstm_mlp_gray_scott_reaction_diffusion_pod_e1_d1_lr1.00e-02_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e1_d1_lr1.00e-03_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e1_d1_lr1.00e-04_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e1_d1_lr1.00e-05_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e2_d2_lr1.00e-02_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e2_d2_lr1.00e-03_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e2_d2_lr1.00e-04_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e2_d2_lr1.00e-05_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e3_d1_lr1.00e-02_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e3_d1_lr1.00e-03_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e3_d1_lr1.00e-04_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e3_d1_lr1.00e-05_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e3_d2_lr1.00e-02_test_loss.pkl  lstm_mlp_gray_scott_reaction_diffusion_pod_e3_d2_lr1.00e-03_test_loss.pkl  (+562 more)
scripts/: exp2.py  (+15 more)
(+113 files in other folders)
